# Tumo_2025_Summer_Workshop

./: .env  .gitignore  notes.md  pyproject.toml
app/: app.py
app/pages/: 1_Streamlit_Basics.py
assets/: Generative AI Workshop.docx
data/: Ferrari.html  Is_It_Wrong_to_Remove_a_Card_From_Monopoly_The_New_York_Times.html  hamlet_DOC_FolgerShakespeare.doc  iris.xls
data/armenian_dishes/: Readme.md
db/my_first_vdb/: chroma.sqlite3
notebooks/: Day_1_Intro_to_LLM_and_Prompt_Engineering.ipynb  Day_2_Retrieval_Augmented_Generation.ipynb  Day_3_Agents.ipynb  Day_4_Workflows.ipynb  Day_4_Workflows_and_Agents.ipynb  Day_5_Multi_Agent_Systems.ipynb  Day_6_CoT_and_ReAct_Agents.ipynb  Untitled.ipynb
notebooks/db/my_first_vdb/: chroma.sqlite3
