[project]
name = "tumo-2025-summer-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=0.2.14",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "langgraph>=0.2.60",
    "pymupdf>=1.25.1",
    "pypdf>=5.1.0",
    "rich>=13.9.4",
    "python-dotenv>=1.0.1",
    "jupyterlab>=4.3.5",
    "langchain-unstructured>=0.1.5",
    "unstructured>=0.17.2",
    "markdown>=3.8",
    "langchain-experimental>=0.3.4",
    "langchain-chroma>=0.2.3",
    "streamlit>=1.45.1",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
